# ncn-demo

./: .gitignore  README.md
keys/: jito-admin.json  op0-admin.json  op1-admin.json  user.json
mini-ncn/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
mini-ncn/programs/mini-ncn/: Cargo.toml
mini-ncn/programs/mini-ncn/src/: lib.rs
mini-ncn/tests/: mini-ncn.test.ts  mini-ncn.ts  rewards-tree.ts
scripts/: run_all.sh  start-localnet.sh
