[workspace]
members = [
    "programs/*",
    "deps/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
borsh = "^0.10"
bytemuck = "1.22.0"
num-derive = "^0.4"
num-traits = "^0.2"
serde = "^1.0.219"
serde_with = "^3.12.0"
solana-program = "2"
thiserror = "^2.0.12"
# jito-restaking-core = { git = "https://github.com/jito-foundation/restaking.git" }

